--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ Depends:
     R (>= 3.0.0)
 Suggests:
     testthat,
-    openssl
+    openssl,
+    getPass
 RoxygenNote: 5.0.1
 License: GPL-3 | file LICENSE
 Encoding: UTF-8
