--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(encryptItem)
 export(fetchItem)
 export(generatePassword)
 export(getItemId)
+export(getSetItem)
 export(removeItem)
 export(storeItem)
 export(updateItem)
